package abstractfactory;

public interface DeliveryFactory {

    Menu crearMenu();

    MetodoPago crearMetodoPago();
}