package abstractfactory;

public interface Menu {

    void mostrarMenu();

}
