package abstractfactory;

public interface MetodoPago {

    void pagar();

}